Artefacts/Edge Site/ServiceAccount_kill-switch.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: killswitch-ns
