Artefacts/Edge Site/normal_withScript.yaml
apiVersion: v1
kind: Pod
metadata:
  name: killswitch
  namespace: killswitch-ns
spec:
  serviceAccountName: killswitch
  containers:
  - name: killswitch
    image: localhost:32000/killswitch:v3
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: only-volume
      mountPath: /tmp/
        #command: ["/bin/sh", "-c", "/tmp/cert-control.sh"]
  volumes:
  - name: only-volume
    hostPath:     ## can be PVC instead for hostPath for log savings
      path: /home/sysadmin/WORKING/
  restartPolicy: OnFailure
